Remove sensitive credentials and add security improvements
- Remove Gmail OAuth credentials and client secret files
- Replace real App Password with placeholder in config
- Add .gitignore entries for sensitive files
- Keep working email notification system with Local adapter

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ eCMS-*.tar
 npm-debug.log
 /assets/node_modules/
 
+# Ignore sensitive configuration files
+config/gmail_client_secret.json
+config/*_secret.json
+config/*_credentials.json
+
